# rust-rig-stuff

./: .gitignore  LICENSE  README.md  rust_ai_llm_echosystem.md
flight_search_assistant/: Cargo.toml
flight_search_assistant/src/: flight_search_tool.rs  main.rs  response.txt
