[package]
name = "flight_search_assistant"
version = "0.1.0"
edition = "2024"


[dependencies]
rig-core = "0.6.0"
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.11", features = ["json"] }
dotenv = "0.15"
async-trait = "0.1"
thiserror = "2.0.9"
chrono = { version = "0.4", features = ["serde"] }
